--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "eslint": "^6.6.0",
+    "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^4.0.8"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.3"
   }
 }
